<resources>
    <string name="app_name">Safepal</string>
    <string name="action_settings">Settings</string>
    <string name="overall_exit">Exit App</string>
    <string name="overall_fab_back">Back</string>
    <string name="overall_fab_next">Next</string>
    <string name="overall_fab_submit">Submit</string>
    <string name="not_your_fault_alert_header">It is not your fault</string>
    <string-array name="not_your_fault_messages">
<item>Whatever happened was not your fault. No one has the right to sexually violate you.  The rapist is solely to blame.
           What a person wears, what a person says, or how a person acts cannot justify sexual violence.</item>
        <item>Most people are raped by people they know. You do not have to protect the perpetrator. Make protecting yourself your priority.</item>
        <item>If you want to report the crime to the police, do so. Reporting sexual violence may help protect others from that person —
        may help you recover and heal from the incident
        </item>

    </string-array>
    <string name="seek_medical_alert_head">Seek medical Care</string>
    <string-array name="seek_medical_care_messages">
        <item>You should seek medication care as soon as possible. 40% of rape survivors develop sexually transmitted infections as a result of sexual assault. </item>

        <item>You should get medical attention right away without changing your clothes, showering, douching, or washing. Although it is a natural instinct to wash away all traces of a sexual assault, being examined right away is the best way to ensure you get proper medical treatment.</item>
        <item>Immediate medical attention helps when people decide to report the crime, providing evidence needed to prosecute the rapist if a criminal case is pursued. If you have been raped and think you do not want to report it, you could report it later and having the medical exam results can help you.</item>
        <item>Even if you do not get examined right away, you can still get a checkup later. It is always best to see a doctor immediately after a rape. But a person can still go to a doctor or local clinic to get checked out for STIs, pregnancy, or injuries any time after being raped.</item>
        <item>All doctors and nurses will deal with your medical needs confidentially, and they will not inform anyone without your consent</item>

    </string-array>
    <string name="signs_of_sgbv_header">Beware.. </string>
    <string-array name="signs_of_sgbv">
        <item>Beware of torn, stained, or bloody underclothing as one of a physical sign of sexual violence   </item>
        <item>Beware of pain or itching in genital area as one of a physical sign of sexual violence</item>
        <item>Beware of difficulty walking or sitting as one of a physical sign of sexual violence</item>
        <item>Beware of bruises or bleeding in genital areas as one of a physical sign of sexual violence</item>
        <item>Beware of frequent urinary or yeast infections as one of a physical sign of sexual violence</item>
        <item>Beware of sexually transmitted diseases as one of a physical sign of sexual violence</item>

        <item>Chronic depression as a behavioral symptom is far more common than physical ones</item>
        <item>Pain or itching in genital area is a sign of sexual violence</item>
        <item>The survivor might have difficulty walking or sitting</item>
        <item>The Bruises or bleeding in genital areas is a sign of sexual violence</item>
        <item>Beware of frequent urinary or yeast infections</item>
        <item> Beware of Sexually transmitted diseases after sexual violence</item>

    </string-array>
    <string-array name="home_contact_info">
        <item>Whatever happened was not your fault. No one has the right to sexually violate you.  The rapist is solely to blame.
           What a person wears, what a person says, or how a person acts cannot justify sexual violence.</item>
        <item>Most people are raped by people they know. You do not have to protect the perpetrator. Make protecting yourself your priority.</item>
        <item>If you want to report the crime to the police, do so. Reporting sexual violence may help protect others from that person —
        may help you recover and heal from the incident
        </item>
        <item>You should seek medication care as soon as possible. 40% of rape survivors develop sexually transmitted infections as a result of sexual assault. </item>

        <item>You should get medical attention right away without changing your clothes, showering, douching, or washing. Although it is a natural instinct to wash away all traces of a sexual assault, being examined right away is the best way to ensure you get proper medical treatment.</item>
        <item>Immediate medical attention helps when people decide to report the crime, providing evidence needed to prosecute the rapist if a criminal case is pursued. If you have been raped and think you do not want to report it, you could report it later and having the medical exam results can help you.</item>
        <item>Even if you do not get examined right away, you can still get a checkup later. It is always best to see a doctor immediately after a rape. But a person can still go to a doctor or local clinic to get checked out for STIs, pregnancy, or injuries any time after being raped.</item>
        <item>All doctors and nurses will deal with your medical needs confidentially, and they will not inform anyone without your consent</item>

    </string-array>
    <string name="action_home_disclaimer">Disclaimer</string>
    <string name="action_home_guide">Guide</string>
    <string name="home_fab_report">Report Sexual Violence</string>
    <string name="home_activity_title">SafePal</string>
    <string name="wsgh_activity_title"> Getting Help</string>
    <string name="wsgh_msgs_to_ecourage_survivor"> Messages to encourage the survivor or friend to report an incident - Programme team</string>
    <string name="wsgh_happened_to_who">Did the incident happen to you?</string>
    <string name="wsgh_yes">Yes, it was me.</string>
    <string name="wsgh_someone_else">No, to somebody I know</string>
    <string-array name="wsgh_someone_else_array">
        <item>How are you related to her/him?</item>
        <item>Relative</item>
        <item>Friend</item>
        <item>School-mate</item>
        <item>Other</item>

    </string-array>
    <string name="sif_activity_title">Getting Help </string>
    <string name="sif_survivor_age">When were you born ?</string>
    <string name="sif_survivor_pick_age">choose a date </string>
    <string name="sif_survivor_gender">Are you female or male ?</string>
    <string name="sif_survivor_gender_above_18">Are you a Man or Woman?</string>
    <string name="sif_incident_location">Where did it happen?</string>
    <string name="sif_incident_details">Tell the story of the incident.</string>
    <string name="sif_incident_contact">Provide us with your phone number </string>
    <string name="sif_male">Boy </string>
    <string name="sif_female">Girl </string>
    <string-array name="sif_incident_type_below">
        <item>What happened to you?</item>
        <item>Bad touches </item>
        <item>Someone tried to defiled me</item>
        <item>I was defiled</item>
        <item>other</item>
    </string-array>
    <string-array name="sif_incident_type_above">
        <item>What happened to you?</item>
        <item>Bad touches </item>
        <item>Someone tried to rape me</item>
        <item>I was raped</item>
        <item>I was defiled</item>
        <item>other</item>
    </string-array>
    <string name="apif_activity_title">Getting Help </string>
    <string name="survivor_age">How old is she/he? </string>
    <string name="apif_survivor_gender">Is this person female or male?</string>
    <string name="apif_survivor_gender_above_18">Is she/he a Man or Woman?</string>
    <string name="incident_location">Where did it happen?</string>
    <string name="incident_details">Tell the story of the incident.</string>
    <string name="apif_male">Boy </string>
    <string name="apif_female">Girl </string>
    <string-array name="apif_incident_type_below">
        <item>What happened to him or her?</item>
        <item>Bad touches </item>
        <item>Someone tried to defile him or her</item>
        <item>He/She was defiled</item>
        <item>other</item>
    </string-array>
    <string-array name="apif_incident_type_above">
        <item>What happened to him or her?</item>
        <item>Bad touches </item>
        <item>Someone tried to rape him or her</item>
        <item>He/She was raped</item>
        <item>other</item>
    </string-array>
    <string-array name="survivor_age_range">
        <item>How old is he/she?</item>
        <item>Below 10 years</item>
        <item>11 years</item>
        <item>12 years</item>
        <item>13 years</item>
        <item>14 years</item>
        <item>15 years</item>
        <item>16 years</item>
        <item>17 years</item>
        <item>18 years</item>
        <item>19 years</item>
        <item>20 years</item>
        <item>21 years</item>
        <item>22 years</item>
        <item>23 years</item>
        <item>24 years</item>
        <item>Above 24 years</item>

    </string-array>
    <string name="title_activity_main_activitysdas">MainActivitysdas</string>
    <string name="title_activity_referral">Contact Info…</string>
    <string name="after_submit_msg">Thank you for submitting the Incident. The incident was successfully delivered to SafePal. \nSafePal will in a short while provide you with a person to assist you.</string>
    <string name="title_activity_eferral2">Nearest CSO</string>
    <string name="refferal_two_intro">We have located the nearest ... (CSO) to you.\nThe people at this CSO have already gotten information about this incident and they will be contacting you soon.\nBelow are the details of this CSO.</string>
    <string name="close_dialog">Close</string>
    <string name="em_not_fault">It\'s not your fault</string>
    <string name="title_activity_contact">Nearest Help</string>
    <string name="contact_u_or_not">Would you like to contact you?</string>
    <string name="contact_yes">Yes</string>
    <string name="contact_no">No</string>
    <string name="title_activity_cso">Help</string>
    <string name="reset_button">Reset</string>
    <string name="exitApp">Exit</string>
    <string name="next">Next</string>
    <string name="report_sexual_abuse">Report Sexual Abuse</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="title_activity_reporting">Report</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cannotLeaveBlank">Kindly fill this field.</string>
    <string name="next_message">next</string>
    <string name="intro_encouraging_messages">Get familiar with important information by viewing the quick help information below. Press \'Next\' to show other information</string>
    <string name="home">Home</string>
    <string name="auto_scroll_messages">Auto scroll</string>
    <string name="shared_pref_name">safepal_prefs</string>
    <string name="cso_no_internet_text">No internet connection. Make sure Wi-Fi or cellular data is turned on, then try again </string>
    <string name="cso_no_internet_retry">Retry</string>
    <string name="contact_safepal_number_text"> - This is your safepal number. SAVE IT FOR FURTHER HELP</string>
    <string name="contact_safepal_number_holder"> ----------- </string>
    <string name="cso_personal_contact_text"> - This is your phone number. We will contact you using it.</string>
    <string name="cso_service_providers">Here\'s the Closest Help to you</string>
</resources>