<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cso"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.unfpa.safepal.ProvideHelp.CsoActivity"
    tools:showIn="@layout/activity_cso">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/cso_ecouraging_messages_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/wsgh_msgs_to_ecourage_survivor"
            android:onClick="onClickCsoEncouragingMessages"/>

        <include layout="@layout/divider" />

       <!-- safepal number linear layout holder-->
        <LinearLayout
            android:id="@+id/cso_ll_safepal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cso_safepal_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/contact_safepal_number_holder"
                android:textColor="@color/colorAccent"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/cso_safepal_number_text_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                android:textStyle="italic"
                android:text="@string/contact_safepal_number_text"
                android:textColor="@color/colorVeryBlack"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
       <!-- <TextView

            android:id="@+id/cso_safepal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cso_horizotal_line"
            android:textStyle="bold|italic"
            android:text="Your Safepal Number: "
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/cso_contact_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/safepal_no_size"
                />
            <TextView
                android:id="@+id/cso_contact_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cso_personal_contact_text"
                android:textStyle="italic"
                android:textColor="@color/colorVeryBlack"
                />

        </LinearLayout>

        <Button
            style="@style/NiceButton"
            android:id="@+id/cso_childhelpline_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Call Toll Free"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:textStyle="bold"
            android:maxLines="1"
            android:onClick="onClickCsoCall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cso_service_providers"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:maxLines="1"
            android:layout_marginTop="20dp"
            android:textSize="18dp"/>

        <include layout="@layout/divider" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/cso_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:scrollbars="vertical"/>

            <LinearLayout
                android:id="@+id/cso_no_internet_ll"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:id="@+id/cso_no_internet_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cso_no_internet_text"
                    android:textAlignment="center"/>
                <Button
                    android:id="@+id/cso_no_internet_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cso_no_internet_retry"
                    android:textSize="22sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>


        <!--<include layout="@layout/divider" />-->







    <!--</RelativeLayout>-->
        <!--<include layout="@layout/footer_buttons" />-->
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:layout_weight="1"
                android:id="@+id/exit_app"
                style="@style/materialButtonAttention"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exitApp" />

            <Button

                style="@style/materialButtonNormal"
                android:text="@string/home"
                android:layout_weight="1"
                android:id="@+id/finish"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />-->

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
